import * as grpc from '@grpc/grpc-js';
import * as protoLoader from '@grpc/proto-loader';
import { join, dirname } from 'path';
import { fileURLToPath } from 'url';
import { BridgeEvent } from '../types/bridge.proto';

// –ü–æ–ª—É—á–µ–Ω–∏–µ __dirname –≤ ES –º–æ–¥—É–ª—è—Ö
const __filename = fileURLToPath(import.meta.url);
const __dirname = dirname(__filename);

// –ó–∞–≥—Ä—É–∑–∫–∞ proto —Ñ–∞–π–ª–∞
const PROTO_PATH = join(__dirname, '../../proto/bridge.proto');
const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true,
});

const bridgeProto = grpc.loadPackageDefinition(packageDefinition) as any;

export class GrpcClient {
  private client: any; // eslint-disable-line @typescript-eslint/no-explicit-any

  constructor(serverUrl: string = 'localhost:50051') {
    this.client = new bridgeProto.bridge.BridgeService(
      serverUrl,
      grpc.credentials.createInsecure()
    );
  }

  // –ü–æ–¥–∫–ª—é—á–µ–Ω–∏–µ –∫ —Å—Ç—Ä–∏–º—É —Å–æ–±—ã—Ç–∏–π
  public async connectToEventStream(): Promise<void> {
    console.log('üîå –ü–æ–¥–∫–ª—é—á–µ–Ω–∏–µ –∫ gRPC —Å–µ—Ä–≤–µ—Ä—É...');

    const call = this.client.streamEvents({});

    call.on('data', (event: BridgeEvent) => {
      console.log('üì® –ü–æ–ª—É—á–µ–Ω–æ —Å–æ–±—ã—Ç–∏–µ:', JSON.stringify(event, null, 2));
    });

    call.on('end', () => {
      console.log('üîå –°–æ–µ–¥–∏–Ω–µ–Ω–∏–µ —Å —Å–µ—Ä–≤–µ—Ä–æ–º –∑–∞–∫—Ä—ã—Ç–æ');
    });

    call.on('error', (error: Error) => {
      console.error('‚ùå –û—à–∏–±–∫–∞ gRPC —Å–æ–µ–¥–∏–Ω–µ–Ω–∏—è:', error);
    });

    // –û–±—Ä–∞–±–æ—Ç–∫–∞ Ctrl+C
    process.on('SIGINT', () => {
      console.log('\nüõë –û—Ç–∫–ª—é—á–µ–Ω–∏–µ –æ—Ç —Å–µ—Ä–≤–µ—Ä–∞...');
      call.cancel();
      process.exit(0);
    });
  }
}

// –ü—Ä–∏–º–µ—Ä –∏—Å–ø–æ–ª—å–∑–æ–≤–∞–Ω–∏—è
if (import.meta.url === `file://${process.argv[1]}`) {
  const client = new GrpcClient();
  client.connectToEventStream().catch(console.error);
}
